src/test/ui/existential_types/declared_but_never_defined.stderr
error: could not find defining uses
  --> $DIR/declared_but_never_defined.rs:6:1
   |
LL | existential type Bar: std::fmt::Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

